Network Service: Fix VariationsHttpHeadersBrowserTest.TestStrippingHeadersFromSubresourceRequest

This CL adds a VariationsHeaderURLLoaderThrottle on renderer to fix
the VariationsHttpHeadersBrowserTest.TestStrippingHeadersFromSubresourceRequest.

Bug: 841309
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: I6120ca42d7aeee9fe721a5af7c93c4047416225b
Reviewed-on: https://chromium-review.googlesource.com/1103451
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Commit-Queue: Jun Cai <juncai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573465}
Former-commit-id: db3f93cc5849efa94d4568bb4dbb3faf1dd776d8