chrome/renderer/url_loader_throttle_provider_impl.cc
@@ -10,7 +10,9 @@
 #include "base/message_loop/message_loop_current.h"
 #include "chrome/common/prerender.mojom.h"
 #include "chrome/common/prerender_url_loader_throttle.h"
+#include "chrome/common/variations_header_url_loader_throttle.h"
 #include "chrome/renderer/chrome_content_renderer_client.h"
+#include "chrome/renderer/chrome_render_thread_observer.h"
 #include "chrome/renderer/prerender/prerender_dispatcher.h"
 #include "chrome/renderer/prerender/prerender_helper.h"
 #include "components/safe_browsing/features.h"
@@ -174,6 +176,11 @@ URLLoaderThrottleProviderImpl::CreateThrottles(
               request, type_, render_frame_id))) {
     throttles.push_back(std::move(ad_throttle));
   }
+
+  bool is_off_the_record = ChromeRenderThreadObserver::is_incognito_process();
+  bool is_signed_in = ChromeRenderThreadObserver::is_signed_in();
+  throttles.push_back(std::make_unique<VariationsHeaderURLLoaderThrottle>(
+      is_off_the_record, is_signed_in));
 
   return throttles;
 }
